--- a/SoftwareDevelopmentCompany/SoftwareDevelopmentCompany/Properties/Resources.resx
+++ b/SoftwareDevelopmentCompany/SoftwareDevelopmentCompany/Properties/Resources.resx
@@ -121,11 +121,17 @@
   <data name="IconApp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IconApp.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IconClient" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IconClient.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="IconExit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IconExit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="IconInfo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IconInfo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="IconProject" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IconProject.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="IconStaff" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IconStaff.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
