--- a/SoftwareDevelopmentCompany/SoftwareDevelopmentCompany/Properties/Resources.resx
+++ b/SoftwareDevelopmentCompany/SoftwareDevelopmentCompany/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="IconClient" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IconClient.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IconDocumentation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IconDocumentation.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="IconExit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IconExit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -133,7 +136,16 @@
   <data name="IconProject" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IconProject.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IconProjectRoleStaff" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IconProjectRoleStaff.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="IconSearch" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IconSearch.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="IconStaff" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IconStaff.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="IconTest" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IconTest.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
